--- a/index.html
+++ b/index.html
@@ -945,15 +945,15 @@
                     <h3 style="font-size: 1.8rem; font-weight: 600; margin-bottom: 2rem; color: var(--primary-purple); text-align: center;">Explore the Neighborhood</h3>
                     <div class="photo-gallery">
                         <div class="photo-item fade-in">
-                            <img src="assets/images/baylor-hospital.jpg" alt="Baylor University Medical Center - 2 minute walk" loading="lazy">
+                            <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940256/hospital_y2ezu7.jpg" alt="Baylor University Medical Center - 2 minute walk" loading="lazy">
                             <div class="photo-caption">Baylor Medical Center - 2 Minute Walk</div>
                         </div>
                         <div class="photo-item fade-in">
-                            <img src="assets/images/downtown-dallas.jpg" alt="Downtown Dallas skyline view" loading="lazy">
+                            <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940257/downtown_ru5fep.jpg" alt="Downtown Dallas skyline view" loading="lazy">
                             <div class="photo-caption">Downtown Dallas - 2 Minutes Away</div>
                         </div>
                         <div class="photo-item fade-in">
-                            <img src="assets/images/deep-ellum.jpg" alt="Deep Ellum entertainment district" loading="lazy">
+                            <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940257/uptown_vnqrz3.jpg" alt="Deep Ellum entertainment district" loading="lazy">
                             <div class="photo-caption">Deep Ellum Entertainment - 5 Minutes</div>
                         </div>
                     </div>
@@ -962,15 +962,15 @@
                 <!-- Additional Property Photos -->
                 <div class="photo-gallery" style="margin-top: 3rem;">
                     <div class="photo-item fade-in">
-                        <img src="assets/images/workspace.jpg" alt="Dedicated workspace with desk, chair, and high-speed WiFi" loading="lazy">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940256/interior2_ruv08u.jpg" alt="Dedicated workspace with desk, chair, and high-speed WiFi" loading="lazy">
                         <div class="photo-caption">Dedicated Workspace - Perfect for Remote Work</div>
                     </div>
                     <div class="photo-item fade-in">
-                        <img src="assets/images/parking.jpg" alt="Free private parking area for guests" loading="lazy">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940256/parking_y0bux7.jpg" alt="Free private parking area for guests" loading="lazy">
                         <div class="photo-caption">Free Private Parking - No Daily Fees</div>
                     </div>
                     <div class="photo-item fade-in">
-                        <img src="assets/images/entrance.jpg" alt="Secure building entrance with keypad entry" loading="lazy">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940637/door_laathi.jpg" alt="Secure building entrance with keypad entry" loading="lazy">
                         <div class="photo-caption">Secure Keypad Entry - Contactless Check-in</div>
                     </div>
                 </div>
@@ -989,15 +989,15 @@
                 
                 <div class="hero-gallery">
                     <div class="photo-item main-photo">
-                        <img src="assets/images/mural-front.jpg" alt="CityPlace BnB building exterior with Dallas skyline mural" loading="lazy">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940256/exterior_qcnuqb.jpg" alt="CityPlace BnB building exterior with Dallas skyline mural" loading="lazy">
                         <div class="photo-caption">Iconic Dallas Skyline Mural - Our Landmark Building</div>
                     </div>
                     <div class="photo-item">
-                        <img src="assets/images/unit-interior.jpg" alt="Modern furnished suite interior with king bed" loading="lazy">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940256/interior1_g6hdsq.jpg" alt="Modern furnished suite interior with king bed" loading="lazy">
                         <div class="photo-caption">Luxury King Suite Interior</div>
                     </div>
                     <div class="photo-item">
-                        <img src="assets/images/kitchen.jpg" alt="Fully equipped kitchen with modern appliances" loading="lazy">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940582/kitchen_mesnql.jpg" alt="Fully equipped kitchen with modern appliances" loading="lazy">
                         <div class="photo-caption">Full Kitchen & Breakfast Bar</div>
                     </div>
                 </div>
