--- a/hotels-near-baylor-hospital-dallas.html
+++ b/hotels-near-baylor-hospital-dallas.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Stay steps from Baylor Medical Center Dallas. Quiet, comfortable extended stay suites perfect for medical travelers & families. Full kitchen, flexible rates.">
     <meta name="keywords" content="hotels near baylor medical center dallas, medical stay hotels dallas baylor, hotels near baylor university medical center dallas, extended stay downtown dallas medical district">
     
-    <link rel="canonical" href="https://cityplacebnb.com/hotels-near-baylor-hospital-dallas/">
+    <link rel="canonical" href="https://cityplacebnb.comhotels-near-baylor-hospital-dallas.html">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -422,14 +422,14 @@
 <body>
     <header>
         <nav class="container">
-            <a href="/" class="logo">CityPlace bnb</a>
+            <a href="index.html" class="logo">CityPlace bnb</a>
             <ul class="nav-links">
                 <li><a href="/extended-stay-dallas/">Extended Stay</a></li>
-                <li><a href="/hotels-near-baylor-hospital-dallas/">Medical Stays</a></li>
+                <li><a href="hotels-near-baylor-hospital-dallas.html">Medical Stays</a></li>
                 <li><a href="/pet-friendly-hotels-downtown-dallas/">Pet-Friendly</a></li>
-                <li><a href="/corporate-housing-downtown-dallas/">Business Travel</a></li>
-                <li><a href="/full-kitchen-hotel-suites-dallas/">Amenities</a></li>
-                <li><a href="/blog/">Local Guide</a></li>
+                <li><a href="business_travel.html">Business Travel</a></li>
+                <li><a href="amenities.html">Amenities</a></li>
+                <li><a href="blog.html">Local Guide</a></li>
                 <li><a href="https://hotels.cloudbeds.com/reservation/lWSPnI" class="book-now-nav" target="_blank">Book Now</a></li>
             </ul>
         </nav>
@@ -437,7 +437,7 @@
 
     <div class="breadcrumbs">
         <div class="container">
-            <a href="/">Home</a> > Hotels Near Baylor Hospital Dallas
+            <a href="index.html">Home</a> > Hotels Near Baylor Hospital Dallas
         </div>
     </div>
 
@@ -712,7 +712,7 @@
                     <h4 style="color: var(--primary-yellow); margin-bottom: 1rem;">Other Services</h4>
                     <a href="/extended-stay-dallas/" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Extended Stay</a>
                     <a href="/pet-friendly-hotels-downtown-dallas/" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
-                    <a href="/corporate-housing-downtown-dallas/" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Business Travel</a>
+                    <a href="business_travel.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Business Travel</a>
                 </div>
             </div>
             
