add google analytics
add google analytics

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
     <meta property="twitter:title" content="Extended Stay Hotels Near Baylor Hospital Dallas | CityPlace BnB">
     <meta property="twitter:description" content="Pet-friendly extended stay suites with full kitchens, dog park, and 2-minute walk to Baylor Medical Center.">
     
+    <!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWXSWPH6X7"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-VWXSWPH6X7');
+	</script>
+    
     <!-- Structured Data -->
     <script type="application/ld+json">
     {
