update navigation links
update navigation links

--- a/blog.html
+++ b/blog.html
@@ -425,7 +425,7 @@
             <ul class="nav-links">
                 <li><a href="extended-stay-dallas.html">Extended Stay</a></li>
                 <li><a href="hotels-near-baylor-hospital-dallas.html">Medical Stays</a></li>
-                <li><a href="/pet-friendly-hotels-downtown-dallas/">Pet-Friendly</a></li>
+                <li><a href="pet-friendly-hotels-downtown-dallas.html">Pet-Friendly</a></li>
                 <li><a href="business_travel.html">Business Travel</a></li>
                 <li><a href="amenities.html">Amenities</a></li>
                 <li><a href="blog.html">Local Guide</a></li>
@@ -608,7 +608,7 @@
                 <div>
                     <h4 style="color: var(--primary-yellow); margin-bottom: 1rem;">Quick Links</h4>
                     <a href="hotels-near-baylor-hospital-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Medical Stays</a>
-                    <a href="/pet-friendly-hotels-downtown-dallas/" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
+                    <a href="/pet-friendly-hotels-downtown-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
                     <a href="amenities.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Amenities</a>
                 </div>
             </div>
