--- a/extended-stay-dallas.html
+++ b/extended-stay-dallas.html
@@ -440,7 +440,7 @@
             <ul class="nav-links">
                 <li><a href="extended-stay-dallas.html">Extended Stay</a></li>
                 <li><a href="hotels-near-baylor-hospital-dallas.html">Medical Stays</a></li>
-                <li><a href="/pet-friendly-hotels-downtown-dallas/">Pet-Friendly</a></li>
+                <li><a href="pet-friendly-hotels-downtown-dallas.html">Pet-Friendly</a></li>
                 <li><a href="business_travel.html">Business Travel</a></li>
                 <li><a href="amenities.html">Amenities</a></li>
                 <li><a href="blog.html">Local Guide</a></li>
@@ -555,9 +555,9 @@
             <p class="section-subtitle">Save money and eat healthily with restaurant-quality kitchen amenities</p>
             
             <div class="features-showcase">
-                <div class="kitchen-image fade-in">
-                    <div>Full Kitchen Photo<br>(From your property images)</div>
-                </div>
+            	<div class="kitchen-image fade-in">
+                        <img src="https://res.cloudinary.com/dvrzgytje/image/upload/v1754940582/kitchen_mesnql.jpg" alt="Dedicated workspace with desk, chair, and high-speed WiFi" loading="lazy">
+                    </div>
                 
                 <div class="fade-in">
                     <h3 style="font-size: 1.8rem; font-weight: 600; margin-bottom: 1.5rem; color: var(--primary-purple);">Everything You Need to Cook</h3>
@@ -707,7 +707,7 @@
                 <div>
                     <h4 style="color: var(--primary-yellow); margin-bottom: 1rem;">Quick Links</h4>
                     <a href="hotels-near-baylor-hospital-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Medical Stays</a>
-                    <a href="/pet-friendly-hotels-downtown-dallas/" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
+                    <a href="/pet-friendly-hotels-downtown-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
                     <a href="amenities.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Amenities</a>
                 </div>
             </div>
