--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
         </section>
 
         <!-- Property Photos Hero Gallery -->
-        <section style="padding: 3rem 0; background: var(--background-gray);">
+        <section style="padding: 3rem 0; background: var(--background-gray);" id="property-showcase">
             <div class="container">
                 <h2 class="section-title">Welcome to CityPlace BnB</h2>
                 <p class="section-subtitle">Experience our newly renovated suites and unique Dallas skyline mural</p>
