--- a/pet-friendly-hotels-downtown-dallas.html
+++ b/pet-friendly-hotels-downtown-dallas.html
@@ -611,7 +611,7 @@
             <ul class="nav-links">
                 <li><a href="extended-stay-dallas.html">Extended Stay</a></li>
                 <li><a href="hotels-near-baylor-hospital-dallas.html">Medical Stays</a></li>
-                <li><a href="/pet-friendly-hotels-downtown-dallas/">Pet-Friendly</a></li>
+                <li><a href="pet-friendly-hotels-downtown-dallas.html">Pet-Friendly</a></li>
                 <li><a href="business_travel.html">Business Travel</a></li>
                 <li><a href="amenities.html">Amenities</a></li>
                 <li><a href="blog.html">Local Guide</a></li>
