--- a/business_travel.html
+++ b/business_travel.html
@@ -633,7 +633,7 @@
             <ul class="nav-links">
                 <li><a href="extended-stay-dallas.html">Extended Stay</a></li>
                 <li><a href="hotels-near-baylor-hospital-dallas.html">Medical Stays</a></li>
-                <li><a href="/pet-friendly-hotels-downtown-dallas/">Pet-Friendly</a></li>
+                <li><a href="pet-friendly-hotels-downtown-dallas.html">Pet-Friendly</a></li>
                 <li><a href="business_travel.html">Business Travel</a></li>
                 <li><a href="amenities.html">Amenities</a></li>
                 <li><a href="/blog/">Local Guide</a></li>
@@ -647,7 +647,7 @@
             <div class="mobile-menu" id="mobileMenu">
                 <a href="extended-stay-dallas.html">Extended Stay</a>
                 <a href="hotels-near-baylor-hospital-dallas.html">Medical Stays</a>
-                <a href="/pet-friendly-hotels-downtown-dallas/">Pet-Friendly</a>
+                <a href="pet-friendly-hotels-downtown-dallas.html">Pet-Friendly</a>
                 <a href="business_travel.html">Business Travel</a>
                 <a href="amenities.html">Amenities</a>
                 <a href="/blog/">Local Guide</a>
@@ -1166,7 +1166,7 @@
                     <h4 style="color: var(--primary-yellow); margin-bottom: 1rem;">Other Services</h4>
                     <a href="extended-stay-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Extended Stay</a>
                     <a href="hotels-near-baylor-hospital-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Medical Stays</a>
-                    <a href="/pet-friendly-hotels-downtown-dallas/" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
+                    <a href="/pet-friendly-hotels-downtown-dallas.html" style="color: #bdc3c7; text-decoration: none; display: block; margin-bottom: 0.5rem;">Pet-Friendly</a>
                 </div>
             </div>
             
