update home page text
update home page text

--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
         <!-- Property Photos Hero Gallery -->
         <section style="padding: 3rem 0; background: var(--background-gray);" id="property-showcase">
             <div class="container">
-                <h2 class="section-title">Welcome to CityPlace BnB</h2>
+                <h2 class="section-title">Welcome to CityPlace Bnb</h2>
                 <p class="section-subtitle">Experience our newly renovated suites and unique Dallas skyline mural</p>
                 
                 <div class="hero-gallery">
