--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       "name": "CityPlace BnB",
       "description": "Extended stay accommodations near Baylor Hospital Dallas with full kitchens and dog park",
       "url": "https://cityplacebnb.com",
-      "telephone": "+1-214-XXX-XXXX",
+      "telephone": "+1-415-851-6099‬",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "3604 San Jacinto St",
@@ -1519,8 +1519,8 @@
                 <div class="footer-section">
                     <h4>CityPlace BnB</h4>
                     <p>3604 San Jacinto St<br>Dallas, TX 75204</p>
-                    <p>📞 (214) XXX-XXXX</p>
-                    <p>📧 info@cityplacebnb.com</p>
+                    <p>📞 415-851-6099</p>
+                    <p>📧 prestigerental.manager@gmail.com</p>
                 </div>
                 
                 <div class="footer-section">
